# momentum-backtest

./: .gitattributes  .gitignore  LICENSE  Momentum_Backtest.ipynb  Momentum_Backtest_Colab (4).ipynb  Momentum_Backtest_Colab.ipynb  README.md  RESEARCH_NOTE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_backtest.py
.github/workflows/: ci.yml
src/: analysis.py  backtest.py  data.py  metrics.py  strategy.py
src/momentum_backtest/: __init__.py  analysis.py  backtest.py  cli.py  data.py  metrics.py  strategy.py
tests/: test_analysis.py  test_backtest.py  test_data.py  test_metrics.py  test_strategy.py
